Try to add a different desmos file

--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -68,7 +68,8 @@ NOT SURE WHY THIS DESMOS LINK DOES NOT WORK
 \begin{exploration}\label{exp:orth1}
 Drawing a cube
 \begin{center}
-\desmos{64a5f6cf8761ebbaaa07aea9}{800}{600}
+\desmos{o4zmtwx6hf}{800}{600}
+%\desmos{64a5f6cf8761ebbaaa07aea9}{800}{600}
 \end{center}
 \end{exploration}
 
@@ -76,5 +77,6 @@ Drawing a cube
 %https://teacher.desmos.com/activitybuilder/custom/64359cf956e5d599cc48e5d8
 
 %https://teacher.desmos.com/activitybuilder/custom/64a5f6cf8761ebbaaa07aea9
+https://www.desmos.com/calculator/o4zmtwx6hf
 
 \end{document}
