--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -63,17 +63,17 @@ Leibniz's Original Notion of Functions and its Meaning for the Parabola, \emph{C
 
 This property of parabolas, that they have constant subnormals, is encoded twice in the quadratic formula. Once in the first term as we have just seen, and again in the second term because the slopes of the tangents to the parabola (\ref{Eq:Parabola}) at its $x$-intercepts are $\pm \sqrt{b^2-4ac}$. 
 
-NOT SURE WHY THIS DESMOS LINK DOES NOT WORK
+NOT SURE WHY THIS DESMOS LINK DOES NOT WORK. THIRD TRY
 
 \begin{exploration}\label{exp:orth1}
-Drawing a cube
+Cylinder
 \begin{center}
-\desmos{o4zmtwx6hf}{800}{600}
+\desmos{4rzcqbw4at}{800}{600}
 %\desmos{64a5f6cf8761ebbaaa07aea9}{800}{600}
 \end{center}
 \end{exploration}
 
-64a5f6cf8761ebbaaa07aea9
+%64a5f6cf8761ebbaaa07aea9
 %https://teacher.desmos.com/activitybuilder/custom/64359cf956e5d599cc48e5d8
 
 %https://teacher.desmos.com/activitybuilder/custom/64a5f6cf8761ebbaaa07aea9
