--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -65,6 +65,8 @@ This property of parabolas, that they have constant subnormals, is encoded twice
 
 NOT SURE WHY THIS DESMOS LINK DOES NOT WORK. FOURTH TRY
 
+NOW THE FIFTH TRY
+
 \begin{exploration}\label{exp:orth1}
 Cylinder
 \begin{center}
