--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -8,7 +8,7 @@ We use calculus to gain insight into information encoded in the quadratic formul
 \maketitle
 
 \begin{exercise}  
-  Choose the best place to work on mathematics.  
+  One of the following expressions gives the area bounded by the $x$-axis and the parabola $y=ax^2+bx+c$. Which one?  
   \begin{multipleChoice}  
     \choice{At the library}  
     \choice[correct]{At the cafe}  
