--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -10,7 +10,7 @@ We use calculus to gain insight into information encoded in the quadratic formul
 \begin{exercise}  
   One of the following expressions gives the area bounded by the $x$-axis and the parabola $y=ax^2+bx+c$. Which one?  
   \begin{multipleChoice}  
-    \choice{At the library}  
+    \choice{$(b^2-4ac)^{3/2}$}  
     \choice[correct]{At the cafe}  
     \choice{In your office}  
   \end{multipleChoice}  
