--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -12,7 +12,7 @@ We use calculus to gain insight into information encoded in the quadratic formul
   \begin{multipleChoice}  
     \choice{$(b^2-4ac)^{3/2}$}  
     \choice[correct]{$\frac{(b^2-4ac)^{3/2}}{3a^2}$}  
-    \choice{In your office}  
+    \choice{$\frac{(b^2-4ac)^{3/2}}{a^2}$}  
   \end{multipleChoice}  
 \end{exercise}  
 
