--- a/ParameterizedCurves/ParameterizedCurves.tex
+++ b/ParameterizedCurves/ParameterizedCurves.tex
@@ -1,18 +1,18 @@
 \documentclass{ximera}
-\title{Calculus and the Quadratic Formula}
+\title{Parameterized Curves}
 
 \begin{document}
 \begin{abstract}
-We use calculus to gain insight into information encoded in the quadratic formula.
+An introduction to describing lines and segments parametrically.
 \end{abstract}
 \maketitle
 
 \begin{exercise}  
-  Choose the best place to work on mathematics.  
+  Which of the following define a curve parametrically?  
   \begin{multipleChoice}  
-    \choice{At the library}  
-    \choice[correct]{At the cafe}  
-    \choice{In your office}  
+    \choice{$y=x^2$}  
+    \choice{$x^2 + y^2 = 5$}  
+    \choice[correct]{$x=t^3+t$, $y=2t^4-t$, $0\leq t \leq 1$}  
   \end{multipleChoice}  
 \end{exercise}  
 
