--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -11,8 +11,8 @@ We use calculus to gain insight into information encoded in the quadratic formul
   One of the following expressions gives the area bounded by the $x$-axis and the parabola $y=ax^2+bx+c$. Which one?  
   \begin{multipleChoice}  
     \choice{$(b^2-4ac)^{3/2}$}  
-    \choice[correct]{$\frac{(b^2-4ac)^{3/2}}{3a^2}$}  
-    \choice{$\frac{(b^2-4ac)^{3/2}}{a^2}$} 
+    \choice[correct]{$\frac{(b^2-4ac)^{3/2}}{12a^2}$}  
+    \choice{$a^2(b^2-4ac)^{3/2}$} 
     \choice{$\frac{(b^2-4ac)^{3/2}}{a^3}$} 
   \end{multipleChoice}  
 \end{exercise}  
