--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -17,8 +17,24 @@ We use calculus to gain insight into information encoded in the quadratic formul
   \end{multipleChoice}  
 \end{exercise}  
 
-\begin{exploration}\label{exp:orth2}
-Let $W =\mbox{span}\left({\bf v}_1,{\bf v}_2\right)$. $W$ is a plane through the origin in $\mathbb{R}^3$.  Use the navigation bar at the bottom of the interactive window to go through the steps of constructing an orthogonal basis for $W$.  RIGHT-CLICK and DRAG to rotate the image for a better view.
+%\begin{exploration}\label{exp:orth2}
+%Let $W =\mbox{span}\left({\bf v}_1,{\bf v}_2\right)$. $W$ is a plane through the origin in $\mathbb{R}^3$.  Use the navigation bar at the bottom of the interactive window to go through the steps of constructing an orthogonal basis for $W$.  RIGHT-CLICK and DRAG to rotate the image for a better view.
+ 
+%\pdfOnly{
+%Access GeoGebra interactives through the online version of this text at
+ 
+%\href{https://ximera.osu.edu/oerlinalg}{https://ximera.osu.edu/oerlinalg}.
+%}
+ 
+%\begin{onlineOnly}
+%    \begin{center}
+%\geogebra{zghsfkym}{900}{600}
+%\end{center}
+%\end{onlineOnly}
+%\end{exploration}
+
+\begin{exploration}\label{exp:cq1}
+Drag the slider $s$ to move the point $P$ along the parabola $y=ax^2 +bx+c$ and check that the length of segment $AB$ remains unchanged.
  
 \pdfOnly{
 Access GeoGebra interactives through the online version of this text at
@@ -28,7 +44,7 @@ Access GeoGebra interactives through the online version of this text at
  
 \begin{onlineOnly}
     \begin{center}
-\geogebra{zghsfkym}{900}{600}
+\desmos{tpoeadrwnt}{900}{600}
 \end{center}
 \end{onlineOnly}
 \end{exploration}
