--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -35,7 +35,7 @@ We use calculus to gain insight into information encoded in the quadratic formul
 
 
 
-Units should play a more prominent role in our classes, particularly in places where they seem not to play any role at all.
+Units could play a more prominent role in our classes, particularly in places where they seem not to play any role at all.
 
 The quadratic formula, for example, comes without units. But in any application the coefficients have meaning and it pays to at least verify the formula is dimensionally correct. And this kind of dimensional thinking can lead to some unexpected insights. %might change the way you look at the quadratic formula.
 
