--- a/ParameterizedCurves/ParameterizedCurves.tex
+++ b/ParameterizedCurves/ParameterizedCurves.tex
@@ -39,7 +39,9 @@ This chapter focuses on the first, motion with a constant velocity.
 
 In colloquial English, velocity is a synonym for speed, as in ``A 747 has a maximum velocity of 650 miles/hour." But this is incorrect, as velocity is propery a vector that describes both speed and direction. So we might describe the velocity of a car by saying that it is moving due north at a speed of 60 miles/hour. For an object (in the plane) to move with a constant velocity means that it is travelling in a fixed direction at a constant speed.
 
+\pskip
 
+\noindent {\bf Example 1:} Between 11:58 am and 12:05pm an ant crawls with a constant velocity, passing the point $A(-3,8)$ at 12:01pm and the point $B()$ at 12:04pm. Parameterize the ant's motion.
 
 
 \begin{exercise}  
@@ -67,7 +69,7 @@ Access GeoGebra interactives through the online version of this text at
 \end{onlineOnly}
 \end{exploration}
 
-
+2apdkp8rwe
 
 Units should play a more prominent role in our classes, particularly in places where they seem not to play any role at all.
 
