--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -16,7 +16,8 @@ We use calculus to gain insight into information encoded in the quadratic formul
     \choice[correct]{$\frac{(b^2-4ac)^{3/2}}{12a^2}$}  
     \choice{$a^2(b^2-4ac)^{3/2}$} 
     \choice{$\frac{(b^2-4ac)^{3/2}}{a^3}$} 
-   \choice{All of the above}
+   \choice{None of the above}
+\choice{All of the above}
   \end{multipleChoice}  
 \end{exercise}  
 
