--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -13,5 +13,6 @@ started with Ximera for course instructors.
  
 %% Here we have a listing of the activities.  
 \activity{FirstActivity/FirstActivity}  
+\activity{SecondActivity/SecondActivity}
  
 \end{document}
