--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -14,5 +14,6 @@ started with Ximera for course instructors.
 %% Here we have a listing of the activities.  
 \activity{FirstActivity/FirstActivity}  
 \activity{SecondActivity/SecondActivity}
+\activity{ThirdActivity/ThirdActivity}
  
 \end{document}
