--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -74,6 +74,7 @@ Access Desmos interactives through the online version of this text at
 \begin{onlineOnly}
     \begin{center}
 \desmos{2apdkp8rwe}{900}{600}
+\desmos{2apdkp8rwe}{900}{600}
 \end{center}
 \end{onlineOnly}
 \end{exploration}
