--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -73,8 +73,7 @@ Access Desmos interactives through the online version of this text at
  
 \begin{onlineOnly}
     \begin{center}
-\desmos{2apdkp8rwe}{900}{600}
-\desmos{2apdkp8rwe}{900}{600}
+\desmos{2apdkp8rwe}{450}{600} \desmos{2apdkp8rwe}{450}{600}
 \end{center}
 \end{onlineOnly}
 \end{exploration}
