--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -1,14 +1,31 @@
 \documentclass{ximera}
-\title{Calculus and the Quadratic Formula}
+\title{The Limits to Growth}
 
 \newcommand{\pskip}{\vskip 0.1 in}
 
+
 \begin{document}
 \begin{abstract}
-We use calculus to gain insight into information encoded in the quadratic formula.
+Depletion of the world's resources.
 \end{abstract}
 \maketitle
 
-Nothing here yet, just a test.
+%\begin{image}  
+%\includegraphics[width=\textwidth]{Graph1.png}  
+%\end{image}
+
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/9kqmbczco7}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{9kqmbczco7}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+
 
 \end{document}
