--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -14,6 +14,21 @@ Depletion of the world's resources.
 %\includegraphics[width=\textwidth]{Graph1.png}  
 %\end{image}
 
+
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/ovjygr01yy}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{ovjygr01yy}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+
+
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
  
