--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -15,5 +15,6 @@ started with Ximera for course instructors.
 \activity{FirstActivity/FirstActivity}  
 \activity{SecondActivity/SecondActivity}
 \activity{ThirdActivity/ThirdActivity}
+\activity{TangentSpheres/TangentSpheres}
  
 \end{document}
