--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -14,6 +14,26 @@ Depletion of the world's resources.
 %\includegraphics[width=\textwidth]{Graph1.png}  
 %\end{image}
 
+\emph{The Project on the Predicament of Mankind} was initiated in 1968 by a group of 30 individuals with a wide range of expertise with the intent of examining the complex problems troubling all nations at that time and that still persist today. Within a year thay had created a model of the five basic factors they identified as limiting growth  - population, agricultural production, natural resources, industrial production, and polution. While perhaps simple by today's standards, the model nevertheless provided valuable insights into how these areas interact with each other to limit growth. The findings are summarized in the 1972 classic \emph{The Limits to Growth}. 
+
+
+\pskip
+
+Some of the most striking observations occur in Chapter 2, \emph{The Limits to Exponential Growth}, when the authors analyze the effects of population growth on the demand for arable land (see the figure below), writing 
+
+\pskip
+
+\emph{The figure also illustrates some very important facts about exponential growth in a limited space. First, it shows how one can move within a very few years from a situation of great abundance to one of great scarcity.}  
+
+\pskip
+
+And my favorite sentence of the book, 
+
+\pskip
+
+\emph{A second lesson to be learned from the figure is that precise numerical assumptions about the limits of the earth are unimportant when viewed against the inexorable progress of exponential growth.}
+
+\pskip
 
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
