--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -5,11 +5,37 @@
 
 \begin{document}
 \begin{abstract}
-Two spheres on a table top are tangent to teach other. We describe the center set of all spheres on the table top that are tangent to these two. 
+Two spheres on a table top are tangent to each other. We describe the center set of all spheres on the table that are tangent to these two. 
 \end{abstract}
 \maketitle
 
-nothing yet.
+Get two spheres, say an orange and a grapefruit, and place them on a table so that they are tangent to each other. Now place another sphere, a tangerine perhaps, on the table and tangent to the other two. Find a fourth sphere if you can and place it on the table tangent to the orange and grapefruit. Keep going, and magine the set of all spheres on the table that are tangent to the orginal two (do this in your mind so that you can place all these spheres on the table without interference). 
+
+What can we say about the set of centers, what we'll call the \emph{center set} of all these variable spheres? Is it finite? Are there enough centers to form a curve? Or maybe a surface?
+
+Some other questions to ponder. Is there a smallest sphere tangent to the original two? Or a largest? Is the center set bounded? Or unbounded?
+
+Can you guess or imagine what the center set might look like?
+
+We'll these questions aside for now and try to get a feel for the problem by thinking about an analogous problem in two-dimensions.
+
+\section{Circles on a Line}
+\begin{exploration}
+Let's replace the table with a line, say the $x$-axis, and the two original spheres with just one circle ${\cal C}_1$, tangent to the $x$-axis. What can we say about the center set of all circles tangent to the $x$-axis and ${\cal C}_1$?
+
+\pdfOnly{
+Access Geogebra interactives through the online version of this text at
+ 
+\href{https://www.geogebra.org/classic/egzphw3q}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\geogebra{egzphw3q}{900}{600}
+\end{center}
+\end{onlineOnly}
+\end{exploration}
+
 
 
 \end{document}
