--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -23,6 +23,8 @@ We'll these questions aside for now and try to get a feel for the problem by thi
 \begin{exploration}
 Let's replace the table with a line, say the $x$-axis, and the two original spheres with just one circle ${\cal C}_1$, tangent to the $x$-axis. What can we say about the center set of all circles tangent to the $x$-axis and ${\cal C}_1$?
 
+To explore this question, drag either the centers or the points of tangency of the circles below to make them tangent to the circle $x^2 + (y-1)^2=1$.
+
 \pdfOnly{
 Access Geogebra interactives through the online version of this text at
  
