--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -9,21 +9,23 @@ Two spheres on a table top are tangent to each other. We describe the center set
 \end{abstract}
 \maketitle
 
-Get two spheres, say an orange and a grapefruit, and place them on a table so that they are tangent to each other. Now place another sphere, a tangerine perhaps, on the table and tangent to the other two. Find a fourth sphere if you can and place it on the table tangent to the orange and grapefruit. Keep going, and magine the set of all spheres on the table that are tangent to the orginal two (do this in your mind so that you can place all these spheres on the table without interference). 
+Get two spheres, say an orange and a grapefruit, and place them on a table so that they are tangent to each other. Now place a third sphere, a tangerine perhaps, on the table and tangent to the other two. Find a fourth sphere if you can and place it on the table tangent to the orange and grapefruit. Keep going, and try to imagine the set of all spheres on the table that are tangent to the orginal two (do this in your mind so that you can place all these spheres on the table at once). 
 
-What can we say about the set of centers, what we'll call the \emph{center set} of all these variable spheres? Is it finite? Are there enough centers to form a curve? Or maybe a surface?
+What can we say about the set of centers, what we'll call the \emph{center set} of all these variable spheres? Is the set finite? Are there enough centers to form a curve? Or maybe a surface?
 
-Some other questions to ponder. Is there a smallest sphere tangent to the original two? Or a largest? Is the center set bounded? Or unbounded?
+Some other questions to ponder. Is there a smallest sphere tangent to the original two? A largest? Is the center set bounded or not?
 
-Can you guess or imagine what the center set might look like?
+Can you guess what the center set might look like? Or what about the set of \emph{tangency points}, where the variable spheres are tangent to the table top?
 
-We'll these questions aside for now and try to get a feel for the problem by thinking about an analogous problem in two-dimensions.
+We'll put these questions aside for now and get a feel for these questions by thinking about an analogous problem in two-dimensions.
 
 \section{Circles on a Line}
 \begin{exploration}
-Let's replace the table with a line, say the $x$-axis, and the two original spheres with just one circle ${\cal C}_1$, tangent to the $x$-axis. What can we say about the center set of all circles tangent to the $x$-axis and ${\cal C}_1$?
+Let's replace the table with a line, say the $x$-axis, and the two original spheres with just one circle ${\cal C}_1$ tangent to the $x$-axis. What can we say about the center set of all circles tangent to both the $x$-axis and ${\cal C}_1$?
 
 To explore this question, drag either the centers or the points of tangency of the circles below to make them tangent to the circle $x^2 + (y-1)^2=1$.
+
+Do  you have a guess about what the center set might be?
 
 \pdfOnly{
 Access Geogebra interactives through the online version of this text at
@@ -34,6 +36,23 @@ Access Geogebra interactives through the online version of this text at
 \begin{onlineOnly}
     \begin{center}
 \geogebra{egzphw3q}{900}{600}
+\end{center}
+\end{onlineOnly}
+\end{exploration}
+
+
+
+
+\begin{exploration}
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/nnryp5eamp}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{nnryp5eamp}{900}{600}
 \end{center}
 \end{onlineOnly}
 \end{exploration}
