--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -42,8 +42,24 @@ Access Geogebra interactives through the online version of this text at
 
 
 
-
 \begin{exploration}
+To verify your guess, let's first find a geometric description of the center set for circles tangent to both the $x$-axis and the circle ${\cal C}_1$ with radius $r_1$ centered at $A(0,r_1)$.
+
+
+\begin{question}  \label{Q243:Spheres}
+Use the picture below to describe a necessary and sufficient condition for the point $P$ to be the center of a circle tangent to both the $x$-axis and ${\cal C}_1$. Choose all that apply.
+
+\begin{selectAll}  
+    \choice{The point $P$ is equidistant from $A$ and the $x$-axis.}  
+    \choice[correct]{The distance from $P$ to $Q$ is equal to the sum of the radii of the two circles.}  
+    \choice{The distance from $P$ to $A$ is $r_1$ units less than the distance from $A$ to the $x$-axis.}  
+    \choice[correct]{The distance from $P$ to $A$ is $r_1$ units greater than the distance from $A$ to the $x$-axis.}  
+     \choice[correct]{$P$ is equidistant from $A$ and the line $y=-r_1$.}
+  \end{selectAll}  
+
+\end{question}
+
+
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
  
