--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -47,14 +47,14 @@ To verify your guess, let's first find a geometric description of the center set
 
 
 \begin{question}  \label{Q243:Spheres}
-Use the picture below to describe a necessary and sufficient condition for the point $P$ to be the center of a circle tangent to both the $x$-axis and ${\cal C}_1$. Choose all that apply.
+Use the picture below to describe a necessary and sufficient condition for the point $P$ to be the center of a circle tangent to both the $x$-axis and the circle ${\cal C}_1$. Choose all that apply.
 
 \begin{selectAll}  
     \choice{The point $P$ is equidistant from $A$ and the $x$-axis.}  
     \choice[correct]{The distance from $P$ to $Q$ is equal to the sum of the radii of the two circles.}  
     \choice{The distance from $P$ to $A$ is $r_1$ units less than the distance from $A$ to the $x$-axis.}  
     \choice[correct]{The distance from $P$ to $A$ is $r_1$ units greater than the distance from $A$ to the $x$-axis.}  
-     \choice[correct]{$P$ is equidistant from $A$ and the line $y=-r_1$.}
+     \choice[correct]{$P$ is equidistant from the point $A$ and the line $y=-r_1$.}
   \end{selectAll}  
 
 \end{question}
@@ -73,6 +73,27 @@ Access Desmos interactives through the online version of this text at
 \end{onlineOnly}
 \end{exploration}
 
+Our next step is to turn one of the geoemtric descriptions above (take your pick) into an equation for the center set. Do this, do some algebra to simplify the equation, and write your simplified equation of the center set below.
+\begin{question}
+\[
+    y = \answer{\frac{x^2}{4r_1}}
+\]
+\end{question}
+
+Finally, le't use your parameterization to write equations of all circle with radius $r$ that are tangent to both the $x$-axis and ${\cal C}_1$.
+
+
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/nixr157hq7}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{nixr157hq7}{900}{600}
+\end{center}
+\end{onlineOnly}
 
 
 \end{document}
