--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -73,14 +73,31 @@ Access Desmos interactives through the online version of this text at
 \end{onlineOnly}
 \end{exploration}
 
+
+\begin{exploration}
+
 Our next step is to turn one of the geoemtric descriptions above (take your pick) into an equation for the center set. Do this, do some algebra to simplify the equation, and write your simplified equation of the center set below.
-\begin{question}
+\begin{question} \label{Q341:Spheres}
 \[
     y = \answer{\frac{x^2}{4r_1}}
 \]
 \end{question}
 
-Finally, le't use your parameterization to write equations of all circle with radius $r$ that are tangent to both the $x$-axis and ${\cal C}_1$.
+
+Next use your equation of the center set to find equations of all circle with radius $r$  tangent to both the $x$-axis and ${\cal C}_1$. Enter these below.
+
+\begin{question} \label{Q341:Spheres}
+An equation of the circle centered in the first quadrant is
+\[
+     \answer{(x-2\sqrt{rr_1})^2 + (y-r)^2 = r^2} .
+\]
+An equation of the circle centered in the second quadrant is
+\[
+     \answer{(x+2\sqrt{rr_1})^2 + (y-r)^2 = r^2} .
+\]
+\end{question}
+
+Finally, follow the directions in the desmos activity below. Be sure to drag the siders to check that your variable circles behave as they should.
 
 
 \pdfOnly{
@@ -94,6 +111,17 @@ Access Desmos interactives through the online version of this text at
 \desmos{nixr157hq7}{900}{600}
 \end{center}
 \end{onlineOnly}
+
+\pskip
+
+\begin{question} \label{Q441:Spheres}
+What happens to the center set in the above demonstation when the radius of the fixed circle is zero (ie. when $r_1=0$)? Is this correct? If not, what should the center set be in this case?
+\begin{hint}
+The center set looks like it vanishes when $r_1=0$. But this is not correct. Think about what it would mean for a circle to be tangent to the degenerate circle $(0,0)$ with radius $r_1=0$. Use this interpretation to describe the correct center set.
+\end{hint}
+
+\end{question}
+\end{exploration}
 
 
 \end{document}
