--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -86,7 +86,7 @@ Our next step is to turn one of the geoemtric descriptions above (take your pick
 
 Next use your equation of the center set to find equations of all circle with radius $r$  tangent to both the $x$-axis and ${\cal C}_1$. Enter these below.
 
-\begin{question} \label{Q341:Spheres}
+\begin{question} \label{Q4541:Spheres}
 An equation of the circle centered in the first quadrant is
 \[
      \answer{(x-2\sqrt{rr_1})^2 + (y-r)^2 = r^2} .
@@ -117,7 +117,7 @@ Access Desmos interactives through the online version of this text at
 \begin{question} \label{Q441:Spheres}
 What happens to the center set in the above demonstation when the radius of the fixed circle is zero (ie. when $r_1=0$)? Is this correct? If not, what should the center set be in this case?
 \begin{hint}
-The center set looks like it vanishes when $r_1=0$. But this is not correct. Think about what it would mean for a circle to be tangent to the degenerate circle $(0,0)$ with radius $r_1=0$. Use this interpretation to describe the correct center set.
+The center set looks like it vanishes when $r_1=0$. But this is not correct. Think about what it would mean for a circle to be tangent to the degenerate circle $(0,0)$ with radius $r_1=0$. Use this interpretation to describe the center set correctly.
 \end{hint}
 
 \end{question}
