--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -21,7 +21,7 @@ We'll put these questions aside for now and get a feel for these questions by th
 
 \section{Circles on a Line}
 \begin{exploration}
-Let's replace the table with a line, say the $x$-axis, and the two original spheres with just one circle ${\cal C}_1$ tangent to the $x$-axis. What can we say about the center set of all circles tangent to both the $x$-axis and ${\cal C}_1$?
+Let's replace the table with a line, say the $x$-axis, and the two original spheres with just one circle ${\cal C}_1$ tangent to the $x$-axis. What can we say about the center set of all circles tangent to the $x$-axis and externally tangent to ${\cal C}_1$?
 
 To explore this question, drag either the centers or the points of tangency of the circles below to make them tangent to the circle $x^2 + (y-1)^2=1$.
 
@@ -122,6 +122,23 @@ The center set looks like it vanishes when $r_1=0$. But this is not correct. Thi
 
 \end{question}
 \end{exploration}
+
+
+\begin{exploration}
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/j96fr7drbv}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{j96fr7drbv}{900}{600}
+\end{center}
+\end{onlineOnly}
+\end{exploration}
+
+
 
 
 \end{document}
