--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -17,11 +17,13 @@ Some other questions to ponder. Is there a smallest sphere tangent to the origin
 
 Can you guess what the center set might look like? Or what about the set of \emph{tangency points}, where the variable spheres are tangent to the table top?
 
-We'll put these questions aside for now and get a feel for these questions by thinking about an analogous problem in two-dimensions.
+We'll put these questions aside for now and get a feel for these questions by thinking about an analogous problem in two dimensions.
 
 \section{Circles on a Line}
 \begin{exploration}
-Let's replace the table with a line, say the $x$-axis, and the two original spheres with just one circle ${\cal C}_1$ tangent to the $x$-axis. What can we say about the center set of all circles tangent to the $x$-axis and externally tangent to ${\cal C}_1$?
+Let's replace the table with a line, say the $x$-axis, and the two original spheres with just one circle ${\cal C}_1$ tangent to the $x$-axis. What can we say about the center set of all circles tangent to the $x$-axis and ${\cal C}_1$?
+
+One little point before we get started. We really require that the variable circle be externally tangent to ${\cal C}_1$ (can you see why) and we assume this troughout.
 
 To explore this question, drag either the centers or the points of tangency of the circles below to make them tangent to the circle $x^2 + (y-1)^2=1$.
 
@@ -125,6 +127,24 @@ The center set looks like it vanishes when $r_1=0$. But this is not correct. Thi
 
 
 \begin{exploration}
+Now let's fix the circle from the last exercise, the one centered in first quadrant, and let it have radius $r_2$ instead of $r$. Then we have two fixed circles
+\[
+   {\cal C}_1: x^2 + y^2 = r1^2
+\]
+and
+\[
+  {\cal C}_2:  (x-2\sqrt{r_1r_2})^2 + (y-r_2)^2 = r_2^2
+\]
+tangent to the $x$-axis and to each other. Our problem now is to find equations of all circles tangent to the $x$-axis and these two fixed circles. How many of these circle do you think there are?
+
+Our first step is to describe the center set for the circle ${\cal C}_2$. Write an equation for this parabola below. You might be able to guess an equation based our previous work. If not, describe the set geometrically and then translate this description into an equation. 
+\begin{question}
+\[
+    \answer{y=\frac{(x-2\sqrt{r_1r_2})^2}{4r_2}}
+\]
+\end{question}
+
+
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
  
