--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -1,6 +1,6 @@
 \documentclass{xourse}  
  
-\title{An example course}  
+\title{Ideas and Images}  
 %% This is the Name of your course  
 %% personalize it  
  
@@ -16,5 +16,6 @@ started with Ximera for course instructors.
 \activity{SecondActivity/SecondActivity}
 \activity{ThirdActivity/ThirdActivity}
 \activity{TangentSpheres/TangentSpheres}
+\activity{PowerSeries/PowerSeries}
  
 \end{document}
