--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -129,7 +129,7 @@ The center set looks like it vanishes when $r_1=0$. But this is not correct. Thi
 \begin{exploration}
 Now let's fix the circle from the last exercise, the one centered in first quadrant, and let it have radius $r_2$ instead of $r$. Then we have two fixed circles
 \[
-   {\cal C}_1: x^2 + y^2 = r1^2
+   {\cal C}_1: x^2 + y^2 = r_1^2
 \]
 and
 \[
@@ -137,12 +137,15 @@ and
 \]
 tangent to the $x$-axis and to each other. Our problem now is to find equations of all circles tangent to the $x$-axis and these two fixed circles. How many of these circle do you think there are?
 
+
+\begin{question}   \label{Q5693:Spheres}
 Our first step is to describe the center set for the circle ${\cal C}_2$. Write an equation for this parabola below. You might be able to guess an equation based our previous work. If not, describe the set geometrically and then translate this description into an equation. 
-\begin{question}
 \[
     \answer{y=\frac{(x-2\sqrt{r_1r_2})^2}{4r_2}}
 \]
 \end{question}
+
+Now the center of a third circle tangent to the first two and the $x$-axis must lie on both center sets. Use this information to find the coordinates of the centers of the two possible third circles.
 
 
 \pdfOnly{
