--- a/PowerSeries/PowerSeries.tex
+++ b/PowerSeries/PowerSeries.tex
@@ -9,6 +9,13 @@ Power series for vector-valued functions (motions).
 \end{abstract}
 \maketitle
 
+\begin{exploration}
+Successive Approximations to the cycloid
+\[
+    (x,y) = (t +\sin t, \cos t) \, , \, -3\pi/2 \leq t \leq 3\pi/2 .
+\]
+
+
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
  
@@ -17,9 +24,9 @@ Access Desmos interactives through the online version of this text at
  
 \begin{onlineOnly}
     \begin{center}
-\desmos{qglnrima3d}{900}{600}
+\desmos{zjg4x9b6y5}{900}{600}
 \end{center}
 \end{onlineOnly}
-
+\end{exploration}
 
 \end{document}
