--- a/PowerSeries/PowerSeries.tex
+++ b/PowerSeries/PowerSeries.tex
@@ -9,8 +9,35 @@ Power series for vector-valued functions (motions).
 \end{abstract}
 \maketitle
 
+
+
 \begin{exploration}
-Successive Approximations to the cycloid
+Successive approximations to the circle
+\[
+    (x,y) = (\sin t, \cos t) \, , \, -3\pi/2 \leq t \leq 3\pi/2 .
+\]
+
+
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/mnciuuvnk8}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{mnciuuvnk8}{900}{600}
+\end{center}
+\end{onlineOnly}
+\end{exploration}
+
+
+
+
+
+
+\begin{exploration}
+Successive approximations to the cycloid
 \[
     (x,y) = (t +\sin t, \cos t) \, , \, -3\pi/2 \leq t \leq 3\pi/2 .
 \]
