--- a/PowerSeries/PowerSeries.tex
+++ b/PowerSeries/PowerSeries.tex
@@ -11,6 +11,7 @@ Power series for vector-valued functions (motions).
 
 
 
+
 \begin{exploration}
 Successive approximations to the circle
 \[
@@ -55,5 +56,30 @@ Access Desmos interactives through the online version of this text at
 \end{center}
 \end{onlineOnly}
 \end{exploration}
+
+
+
+\begin{exploration}
+Successive approximations to the rectangular hyperbola
+\[
+    (x,y) = (\sinh t, 2-\cosh t) \, , \, -3 \leq t \leq 3 .
+\]
+
+
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/2s7yq98rai}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{2s7yq98rai}{900}{600}
+\end{center}
+\end{onlineOnly}
+\end{exploration}
+
+
+
 
 \end{document}
