--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -17,5 +17,6 @@ started with Ximera for course instructors.
 \activity{ThirdActivity/ThirdActivity}
 \activity{TangentSpheres/TangentSpheres}
 \activity{PowerSeries/PowerSeries}
+\activity{InscribedSpheres/InscribedSpheres}
  
 \end{document}
